--- a/src/app/core/templates/card/card.component.sass
+++ b/src/app/core/templates/card/card.component.sass
@@ -35,8 +35,8 @@ $c2-picture-width: 10.5rem
 
 
 .c1-product-text-container-with-img
-    min-height: 5rem
-    padding-left: 5.5rem
+    // min-height: 7rem
+    padding-left: 8.5rem
 
 
 .c1-button-container
@@ -82,3 +82,7 @@ button[class^="c1-button"]
 .c2-button-2
     bottom: 0rem
     left: 0rem
+
+
+.row-with-img
+    min-height: 5rem;
