--- a/src/app/core/templates/table/table.component.sass
+++ b/src/app/core/templates/table/table.component.sass
@@ -87,3 +87,18 @@ td.mat-cell, td.mat-footer-cell, th.mat-header-cell
     position: absolute
     top: 0%
     right: -1rem
+
+
+.mat-expanded::hover
+    background-color: red !important;
+
+#mat-expansion-panel-header-0
+    background-color: red !important;
+    color: red !important;
+
+
+.ng-trigger-expansionHeight
+    background-color: red !important;
+
+.row-with-img
+    min-height: 20rem;
