--- a/src/app/core/templates/grid/grid.component.scss
+++ b/src/app/core/templates/grid/grid.component.scss
@@ -27,7 +27,7 @@
       // overflow: hidden;
       transform-style: preserve-3d;
       // transform-style: preserve-3d;
-      cursor: pointer;
+      // cursor: pointer;
       position: relative;
       // transition: transform 1s;
       // background-color: rgba(0, 255, 13, 1);
@@ -47,10 +47,17 @@
     }
 
     .shader{
-      background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.91) 25%, rgba(255,255,255,1) 40%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
-      background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.91) 25%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
-      background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0.91) 25%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&0+17,1+24 */
+      background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 9rem, rgba(255,255,255,1) 9.5rem, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+      background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 9rem,rgba(255,255,255,1) 9.5rem,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+      background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 9rem,rgba(255,255,255,1) 9.5rem,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
       filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+      
+      // background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0.91) 25%, rgba(255,255,255,1) 40%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+      // background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0.91) 25%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+      // background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0.91) 25%,rgba(255,255,255,1) 40%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+      // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+     
       // background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 20%, rgba(255,255,255,0.72) 38%, rgba(255,255,255,1) 77%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
       // background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 20%,rgba(255,255,255,0.72) 38%,rgba(255,255,255,1) 77%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
       // background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 20%,rgba(255,255,255,0.72) 38%,rgba(255,255,255,1) 77%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
@@ -63,7 +70,7 @@
       width: -webkit-fill-available;
       // background-color: rgba(176, 212, 43, 0.4);
       padding: 1rem;
-      padding-left: 9rem;
+      padding-left: 11rem;
       z-index: 10;
 
 
@@ -130,17 +137,19 @@
   position: inherit;
   // width:70%;
   // margin: 20px;
-  width: 80%;
+  width: 85%;
   min-height: 7vh;
   display: inline-block;
   // border: 1px solid #CCC;
   perspective: 600px;
   // border-radius: 25px;
-  margin: 0.5rem;
+  margin: 0.2rem;
+  padding-left:0.3rem;
   font-family: Roboto,"Helvetica Neue",sans-serif;
   transform-origin: center top;
   transform-style: preserve-3d;
   min-height: 8rem;
+
 }
 
 .card {
@@ -148,10 +157,13 @@
   top: 0%;
   width: 100%;
   height: 100%;
-  cursor: pointer;
+  // cursor: pointer;
   transform-style: preserve-3d;
   transform-origin: center right;
   transition: transform 1.5s;
+  // position: static; 
+  overflow: hidden;
+  border-radius: 2rem 2rem 2rem 2rem !important;
 
 
 }
@@ -194,40 +206,48 @@
 .tiny-text{
   // right:0px;
   // padding: 1rem !important;
-  padding-left: 1rem !important;
   padding: 1rem !important;
+  padding-left: 8rem !important;
   // padding-left: 5rem !important;
 }
 
 
-.tiny-shader{
-  background: -moz-linear-gradient(left, rgba(255,255,255,0.75) 0%, rgba(255,255,255,0.91) 19%, rgba(255,255,255,1) 48%, rgba(255,255,255,1) 100%)!important; /* FF3.6-15 */
-  background: -webkit-linear-gradient(left, rgba(255,255,255,0.75) 0%,rgba(255,255,255,0.91) 19%,rgba(255,255,255,1) 48%,rgba(255,255,255,1) 100%)!important; /* Chrome10-25,Safari5.1-6 */
-  background: linear-gradient(to right, rgba(255,255,255,0.75) 0%,rgba(255,255,255,0.91) 19%,rgba(255,255,255,1) 48%,rgba(255,255,255,1) 100%)!important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bfffffff', endColorstr='#ffffff',GradientType=1 )!important; /* IE6-9 */
+// .tiny-shader{
+//   // background: -moz-linear-gradient(left, rgba(255,255,255,0.75) 0%, rgba(255,255,255,0.91) 19%, rgba(255,255,255,1) 48%, rgba(255,255,255,1) 100%)!important; /* FF3.6-15 */
+//   // background: -webkit-linear-gradient(left, rgba(255,255,255,0.75) 0%,rgba(255,255,255,0.91) 19%,rgba(255,255,255,1) 48%,rgba(255,255,255,1) 100%)!important; /* Chrome10-25,Safari5.1-6 */
+//   // background: linear-gradient(to right, rgba(255,255,255,0.75) 0%,rgba(255,255,255,0.91) 19%,rgba(255,255,255,1) 48%,rgba(255,255,255,1) 100%)!important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+//   // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#bfffffff', endColorstr='#ffffff',GradientType=1 )!important; /* IE6-9 */
   
-  // background: -moz-linear-gradient(left, rgba(255,255,255,0.86) 0%, rgba(255,255,255,0.94) 9%, rgba(255,255,255,1) 29%, rgba(255,255,255,1) 100%) !important; /* FF3.6-15 */
-  // background: -webkit-linear-gradient(left, rgba(255,255,255,0.86) 0%,rgba(255,255,255,0.94) 9%,rgba(255,255,255,1) 29%,rgba(255,255,255,1) 100%)!important; /* Chrome10-25,Safari5.1-6 */
-  // background: linear-gradient(to right, rgba(255,255,255,0.86) 0%,rgba(255,255,255,0.94) 9%,rgba(255,255,255,1) 29%,rgba(255,255,255,1) 100%)!important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dbffffff', endColorstr='#ffffff',GradientType=1 )!important; /* IE6-9 */
+//   // background: -moz-linear-gradient(left, rgba(255,255,255,0.86) 0%, rgba(255,255,255,0.94) 9%, rgba(255,255,255,1) 29%, rgba(255,255,255,1) 100%) !important; /* FF3.6-15 */
+//   // background: -webkit-linear-gradient(left, rgba(255,255,255,0.86) 0%,rgba(255,255,255,0.94) 9%,rgba(255,255,255,1) 29%,rgba(255,255,255,1) 100%)!important; /* Chrome10-25,Safari5.1-6 */
+//   // background: linear-gradient(to right, rgba(255,255,255,0.86) 0%,rgba(255,255,255,0.94) 9%,rgba(255,255,255,1) 29%,rgba(255,255,255,1) 100%)!important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+//   // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dbffffff', endColorstr='#ffffff',GradientType=1 )!important; /* IE6-9 */
 
-  // background: -moz-linear-gradient(left, rgba(255,255,255,0.56) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,1) 100%) !important; /* FF3.6-15 */
-  // background: -webkit-linear-gradient(left, rgba(255,255,255,0.56) 0%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 100%) !important; /* Chrome10-25,Safari5.1-6 */
-  // background: linear-gradient(to right, rgba(255,255,255,0.56) 0%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8fffffff', endColorstr='#ffffff',GradientType=1 ) !important;
+//   // background: -moz-linear-gradient(left, rgba(255,255,255,0.56) 0%, rgba(255,255,255,1) 50%, rgba(255,255,255,1) 100%) !important; /* FF3.6-15 */
+//   // background: -webkit-linear-gradient(left, rgba(255,255,255,0.56) 0%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 100%) !important; /* Chrome10-25,Safari5.1-6 */
+//   // background: linear-gradient(to right, rgba(255,255,255,0.56) 0%,rgba(255,255,255,1) 50%,rgba(255,255,255,1) 100%) !important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+//   // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#8fffffff', endColorstr='#ffffff',GradientType=1 ) !important;
  
-  // background: -moz-linear-gradient(left, rgba(255,255,255,0.79) 0%, rgba(255,255,255,1) 32%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
-  // background: -webkit-linear-gradient(left, rgba(255,255,255,0.79) 0%,rgba(255,255,255,1) 32%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  // background: linear-gradient(to right, rgba(255,255,255,0.79) 0%,rgba(255,255,255,1) 32%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+//   // background: -moz-linear-gradient(left, rgba(255,255,255,0.79) 0%, rgba(255,255,255,1) 32%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+//   // background: -webkit-linear-gradient(left, rgba(255,255,255,0.79) 0%,rgba(255,255,255,1) 32%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+//   // background: linear-gradient(to right, rgba(255,255,255,0.79) 0%,rgba(255,255,255,1) 32%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+//   // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#c9ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
  
-  // background: -moz-linear-gradient(left, rgba(255,255,255,0.86) 0%, rgba(255,255,255,0.94) 9%, rgba(255,255,255,1) 29%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
-  // background: -webkit-linear-gradient(left, rgba(255,255,255,0.86) 0%,rgba(255,255,255,0.94) 9%,rgba(255,255,255,1) 29%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
-  // background: linear-gradient(to right, rgba(255,255,255,0.86) 0%,rgba(255,255,255,0.94) 9%,rgba(255,255,255,1) 29%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-  // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dbffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
+//   // background: -moz-linear-gradient(left, rgba(255,255,255,0.86) 0%, rgba(255,255,255,0.94) 9%, rgba(255,255,255,1) 29%, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+//   // background: -webkit-linear-gradient(left, rgba(255,255,255,0.86) 0%,rgba(255,255,255,0.94) 9%,rgba(255,255,255,1) 29%,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+//   // background: linear-gradient(to right, rgba(255,255,255,0.86) 0%,rgba(255,255,255,0.94) 9%,rgba(255,255,255,1) 29%,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+//   // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#dbffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
 
-} 
+// } 
 
+
+.tiny-shader{
+/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&0+25,1+32 */
+background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) 6.5rem, rgba(255,255,255,1) 7.7rem, rgba(255,255,255,1) 100%)!important; /* FF3.6-15 */
+background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 6.5rem,rgba(255,255,255,1) 7.7rem,rgba(255,255,255,1) 100%)!important; /* Chrome10-25,Safari5.1-6 */
+background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) 6.5rem,rgba(255,255,255,1) 7.7rem,rgba(255,255,255,1) 100%)!important; /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 )!important; /* IE6-9 */
+}
 
 .price{
   position: absolute;
@@ -235,7 +255,7 @@
   padding: 0.3rem;
   z-index: 100;
   right: 0rem;
-  transform:translate(65%,0%)
+  transform:translate(45%,0%)
 
 }
 
@@ -341,4 +361,34 @@
 .product-button-icon{
   color: rgba(51, 51, 51, 0.123);
 
+}
+
+
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+    -webkit-user-select: none; /* Safari */
+     -khtml-user-select: none; /* Konqueror HTML */
+       -moz-user-select: none; /* Firefox */
+        -ms-user-select: none; /* Internet Explorer/Edge */
+            user-select: none; /* Non-prefixed version, currently
+                                  supported by Chrome and Opera */
+}
+
+.food-index{
+  position: absolute;
+  top: 2rem;
+  left: 0.295rem;
+  z-index: 2000;
+  color:rgb(66, 66, 66);
+  
+  padding: 0.3rem;
+
+  font-size: 120%;
+  padding-left: 0.4rem;
+  padding-right: 0.8rem;
+  // border-radius: 1.5rem;
+  background-color: rgba(255, 255, 255, 0.85);
+
+  border-radius: 0rem  1.5rem 1.5rem 0rem;
+  margin:0%;
 }
