--- a/src/app/core/templates/image/image.component.sass
+++ b/src/app/core/templates/image/image.component.sass
@@ -1,4 +1,6 @@
-$i1-picture-width: 6.5rem
+$i1-picture-width: 14.5rem
+$i1-picture-width-shade-start: 6.5rem
+$i1-picture-width-shade-end: 8rem
 $i2-picture-width: 12.5rem
 
 
@@ -30,7 +32,7 @@ $i2-picture-width: 12.5rem
     position: absolute
     top: 0%
     // width: auto
-    height: 101%;
+    height: 100%;
     z-index: 1
     max-width: $i1-picture-width
     background: rgba(200,0,0,0.3)
@@ -45,13 +47,17 @@ $i1-shade-end:      rgba( 255, 255, 255, 1) 95%
 
 
 .i1-shader
-    background: -moz-linear-gradient(right,  $i1-shade-start, $i1-shade-mid, $i1-shade-end);
-    background: -webkit-linear-gradient(right,  $i1-shade-start, $i1-shade-mid, $i1-shade-end);
-    background: -o-linear-gradient(right, $i1-shade-start, $i1-shade-mid, $i1-shade-end);
-    background: -ms-linear-gradient(right, $i1-shade-start, $i1-shade-mid, $i1-shade-end);
-    background: linear-gradient(to right, $i1-shade-start, $i1-shade-mid, $i1-shade-end);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
-  
+    // background: -moz-linear-gradient(right,  $i1-shade-start, $i1-shade-mid, $i1-shade-end);
+    // background: -webkit-linear-gradient(right,  $i1-shade-start, $i1-shade-mid, $i1-shade-end);
+    // background: -o-linear-gradient(right, $i1-shade-start, $i1-shade-mid, $i1-shade-end);
+    // background: -ms-linear-gradient(right, $i1-shade-start, $i1-shade-mid, $i1-shade-end);
+    // background: linear-gradient(to right, $i1-shade-start, $i1-shade-mid, $i1-shade-end);
+    // filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=0 );
+    /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#ffffff+0,ffffff+100&0+23,1+31 */
+    background: -moz-linear-gradient(left, rgba(255,255,255,0) 0%, rgba(255,255,255,0) $i1-picture-width-shade-start, rgba(255,255,255,1) $i1-picture-width-shade-end, rgba(255,255,255,1) 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(left, rgba(255,255,255,0) 0%,rgba(255,255,255,0) $i1-picture-width-shade-start,rgba(255,255,255,1) $i1-picture-width-shade-end,rgba(255,255,255,1) 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(to right, rgba(255,255,255,0) 0%,rgba(255,255,255,0) $i1-picture-width-shade-start,rgba(255,255,255,1) $i1-picture-width-shade-end,rgba(255,255,255,1) 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#00ffffff', endColorstr='#ffffff',GradientType=1 ); /* IE6-9 */
 
   
 
