--- a/src/app/core/templates/table/table.component.html
+++ b/src/app/core/templates/table/table.component.html
@@ -1,18 +1,18 @@
 <div *ngIf="type==1" class="t1">
-  <table mat-table [dataSource]="data.list" class="t1-table">
+  <table mat-table [dataSource]="data.list" class="t1-table"  >
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef class="t1-product-col"></th>
       <td mat-cell *matCellDef="let element">
 
-        <btk-card [data]="element" [language]="language" [type]="1" [isTiny]="isTiny"></btk-card>
+        <btk-card class="" [data]="element" [language]="language" [type]="1" [isTiny]="isTiny"></btk-card>
 
       </td>
     </ng-container>
 
 
 
-    <ng-container [matColumnDef]="quantity" *ngFor="let quantity of data.columns.slice(1); index as i">
+    <ng-container [matColumnDef]="quantity" *ngFor="let quantity of qcolumns.slice(1); index as i">
       <th mat-header-cell *matHeaderCellDef class="t1-price">{{quantity}} </th>
       <td mat-cell *matCellDef="let element" class="t1-price">
         {{element.price[i] | currencyHuf}}
@@ -21,8 +21,11 @@
 
     
 
-    <tr mat-header-row *matHeaderRowDef="data.columns"></tr>
+    <tr mat-header-row *matHeaderRowDef="qcolumns"></tr>
 
-    <tr mat-row *matRowDef="let row; columns: data.columns;"></tr>
+    <tr mat-row *matRowDef="let row; columns: qcolumns;"></tr>
   </table>
 </div>
+
+<!-- [ngClass]="{'tiny-text':isTiny}" -->
+<!-- row-with-img -->
