--- a/src/app/navigator/navigator.component.sass
+++ b/src/app/navigator/navigator.component.sass
@@ -93,7 +93,7 @@ $bd-fade-time: 0.6s
 .my-content-frame-out
   // background-color: rgba(200,211,0,0.3)
   position: absolute;
-  top: 5rem;
+  top: 4rem;
   // transform: translateX(-0.1rem)
   width: 100%;
   // height: 50vw;
@@ -104,8 +104,9 @@ $bd-fade-time: 0.6s
   position: relative;
   // top: 5rem;
   max-width: 38rem
-  width: 100vw;
+  width: 98vw;
   // height: 50vw;
+  padding: 2vw;
   display: inline-block;
   text-align: left;
   transform: translateX(-1%);
