--- a/src/app/views/gallery/gallery.component.html
+++ b/src/app/views/gallery/gallery.component.html
@@ -68,7 +68,7 @@
          (popperOnShown)="onShown($event)">
     </div> -->
 
-
+<!-- 
     <button mat-button>Click me!</button>
 
     <div     [popper]="popper1Content"
@@ -90,3 +90,42 @@
               <mat-button-toggle value="underline">Underline</mat-button-toggle>
             </mat-button-toggle-group>
      </popper-content>
+ -->
+
+     
+<div class="row"> 
+   <div class="column">
+     <img src="https://www.w3schools.com/w3images/wedding.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/rocks.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/falls2.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/paris.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/nature.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/mist.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/paris.jpg" style="width:100%">
+   </div>
+   <div class="column">
+     <img src="https://www.w3schools.com/w3images/underwater.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/ocean.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/wedding.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/mountainskies.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/rocks.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/underwater.jpg" style="width:100%">
+   </div>  
+   <div class="column">
+     <img src="https://www.w3schools.com/w3images/wedding.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/rocks.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/falls2.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/paris.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/nature.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/mist.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/paris.jpg" style="width:100%">
+   </div>
+   <div class="column">
+     <img src="https://www.w3schools.com/w3images/underwater.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/ocean.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/wedding.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/mountainskies.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/rocks.jpg" style="width:100%">
+     <img src="https://www.w3schools.com/w3images/underwater.jpg" style="width:100%">
+   </div>
+ </div> 
